--- a/store/static/css/main.css
+++ b/store/static/css/main.css
@@ -106,3 +106,11 @@ h6 {
 .hidden {
   display: none !important;
 }
+
+.hrProductDetail {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 5px solid rgba(0, 0, 0, 0.1);
+  width: 200px;
+}
